2004-07-20 Mikhail Khodjaiants
	Cleanup.
	* CStackFrame.java

2004-07-16 Mikhail Khodjaiants
	Asynchronous resume, suspend and step operations. Cleanup.
	* CDebugModel.java
	* CDebugElementState.java
	* ICDebugElement.java
	* ICDebugTarget.java
	* ICThread.java: new
	* ICDebugTargetType: removed
	* IState: removed
	* CCoreFileDebugTarget.java
	* CDebugElement.java
	* CDebugTarget.java
	* CStackFrame.java
	* CThread.java
	* CModificationVariable.java

2004-07-15 Alain Magloire

	org.eclipse.cdt.debug.core.cdi.model.type should
	be in the cdi source folder.

2004-07-09 Mikhail Khodjaiants
	Cleanup. Added support of "CDebugElementState".
	* ICDebugElement.java
	* CDebugElement.java

2004-07-09 Mikhail Khodjaiants
	Renamed "ICDebugElementErrorStatus" to "ICDebugElementStatus".
	Added comments to ICDebugElementStatus.java.
	* ICDebugElementStatus.java
	* CDebugElement.java
	* CDebugTarget.java
	* CThread.java
	* CValue.java
	* CVariable.java
 
2004-07-02 Alain Magloire

	Move the CDI interface to its own source browser and library
	* cdi/*

2004-06-29 Alain Magloire

	Do not use the cache stackframe.
	* src/org/eclipse/cdt/debug/internal/core/model/CThread.java

2004-06-29 Mikhail Khodjaiants
	Temporary fix for bug 68915: Invalid values in the Variables view.
	* CStackFrame.java
	* CThread.java

2004-06-28 Mikhail Khodjaiants
	Partial fix for bug 45535: Performance problems when debugging.
	Cache the double and float presentations of the floating point types.
	* CDebugUtils.java
	* CFloatingPointValue.java: new
	* CValueFactory.java

2004-06-24 Mikhail Khodjaiants
	Temporary fix for bug 56520: Debug Perspective doesn't get called when a breakpoint is hit.
	* CThread.java
	
2004-06-23 Mikhail Khodjaiants
	Fix for bug 68316: Exception shutting down Eclipse with an active debug session.
	* CStackFrame.java
	* CThread.java

2004-06-22 Mikhail Khodjaiants
	Replaced global resource bundles by messages.

2004-06-16 Mikhail Khodjaiants